kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
spec:
  selector:
    app: web-nginx
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
