kubernetes/web-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
  labels:
    app: web-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
    spec:
      containers:
      - name: web-nginx
        image: __IMAGE__
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
spec:
  selector:
    app: web-nginx
  type: NodePort
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    nodePort: 30008
